--- a/dataprep.tex
+++ b/dataprep.tex
@@ -76,7 +76,7 @@ at 3:19:11 AM. The third GPU is first installed in locations {\tt
 where a ``DBE'' is observed on November 2, 2018, and it is not seen
 again.
 
-The location references are cabinet row (0-24), column (0-7), cage
+The location references are cabinet column (0-24), row (0-7), cage
 (0-3), slot (0-7), and node (0-3) with respect to the layout shown in
 Figure~\ref{fig:layout}.
 \begin{figure}
@@ -108,4 +108,5 @@ Figure~\ref{fig:layout}.
   floor tiles (more on the right than on the left). Is there cool air
   under the floor?}
 
-\fix{How does the cooling water circulate?}
+\fix{How does the coolant circulate? I notice three sets of pipes on
+  each side of each row: (2 x 3) x 8 = 48 sets.}
