fixed section refs

--- a/intro.tex
+++ b/intro.tex
@@ -51,14 +51,14 @@ Our analysis focuses on GPUs that were installed in the second rework
 cycle and later, essentialy units installed near the beginning of 2014
 and later.
 
-We begin by describing related work in Sec.~\ref{sec:related}. Our
-data collection is desctibed in Sec.~\ref{sec:dataprep} and the data
+We begin by describing related work in Sec.~\ref{section:related}. Our
+data collection is desctibed in Sec.~\ref{section:dataprep} and the data
 cleaning, checking, and lifetime summarization process in
-Sec.~\ref{sec:dataclean}. A timme between failures analysis is given
-in Sec.~\ref{sec:tbf}. Survival analysis based on Kaplan-Meier
+Sec.~\ref{section:dataclean}. A timme between failures analysis is given
+in Sec.~\ref{section:tbf}. Survival analysis based on Kaplan-Meier
 modeling and Cox regression modeling of relative hazard rates are in
-Sec.~\ref{sec:survival}. Finally, we discuss our main conclusions and
-recommendations in Sec.~\ref{sec:discussion}.
+Sec.~\ref{section:survival}. Finally, we discuss our main conclusions and
+recommendations in Sec.~\ref{section:discussion}.
  
 
 
