--- a/intro.tex
+++ b/intro.tex
@@ -52,13 +52,14 @@ cycle and later, essentialy units installed near the beginning of 2014
 and later.
 
 We begin by describing related work in Sec.~\ref{section:related}. Our
-data collection is desctibed in Sec.~\ref{section:dataprep} and the data
-cleaning, checking, and lifetime summarization process in
-Sec.~\ref{section:dataclean}. A timme between failures analysis is given
-in Sec.~\ref{section:tbf}. Survival analysis based on Kaplan-Meier
-modeling and Cox regression modeling of relative hazard rates are in
-Sec.~\ref{section:survival}. Finally, we discuss our main conclusions and
-recommendations in Sec.~\ref{section:discussion}.
+data collection is desctibed in Sec.~\ref{section:dataprep} and the
+data cleaning, checking, and lifetime summarization process in
+Sec.~\ref{section:dataclean}. A time between failures (TBF) analysis
+is given in Sec.~\ref{section:tbf}. Survival analysis based on
+Kaplan-Meier modeling (KM) and Cox regression modeling (CR) of
+relative hazard rates in various locations are in
+Sec.~\ref{section:survival}. Finally, we discuss our main conclusions
+and recommendations in Sec.~\ref{section:discussion}.
  
 
 
