--- a/intro.tex
+++ b/intro.tex
@@ -49,7 +49,10 @@ a lot of cases, they will just fail as well. \fix{Give a reference and
 
 Our analysis focuses on GPUs that were installed in the second rework
 cycle and later, essentialy units installed near the beginning of 2014
-and later.
+and later. \fix{Will we (are we required) make the data publicly
+  available?} The data used in this study, representing over 100,000
+hours of operation may be the largest publicly available GPU
+reliability data set.
 
 We begin by describing related work in Sec.~\ref{section:related}. Our
 data collection is desctibed in Sec.~\ref{section:dataprep} and the
