--- a/abstract.tex
+++ b/abstract.tex
@@ -10,7 +10,7 @@ reliability viewpoint as most of its power came from 18,688 GPUs whose
 operation was forced to execute three very significant rework cycles,
 two on the mechanical assembly and one on the GPUs. We write about the
 last rework cycle and a reliability analysis of over 100,000 operation
-years the GPU lifetimes. Using statistical survival analysis
+years in the GPU lifetimes. Using statistical survival analysis
 techniques, we find that GPU reliability is dependent on heat
 dissipation to an extent that strongly correlates with detailed
 nuances of the system cooling architecture. In addition to describing
