first changes reflecting meeting - more coming

--- a/dataprep.tex
+++ b/dataprep.tex
@@ -89,8 +89,11 @@ Figure~\ref{fig:layout}.
     \vspace{5em}
     \includegraphics[width=\columnwidth]{figs/TitanLayout.png}
   \end{minipage}
-  \caption{Titan cabinet, blade, and floor layout. Note cooling
-    airflow is bottom to top within cabinet.}
+  \caption{Titan cabinet, blade, and floor layout. Cooling airflow is
+    bottom to top within a cabinet, taking ambient air in at the foot
+    and relasing it back out at the top. Cooling fluid is passed
+    through two heat exchangers, one below Cage 0 and one above Cage
+    2.}
   \label{fig:layout}
 \end{figure}
 
